src/pj/poco/test/neg/NARRFUNC.POC
/* Make sure can't use an integer as a function */
#pragma poco echo "expect>trying to call something that's not a function"

int not_a_func;

main()
{
not_a_func();
puts("This should not compile");
}
